# third_pro_fastapi

./: .env  Dockerfile  README.md  alembic.ini  database_versions.py  pyproject.toml
auto_search/: research_rewards.py
migrations/: env.py
migrations/versions/: 1da6a01e6ba5_create_products_table.py  ad4e8a36ef64_create_clients_table.py
tests/: conftest.py  factories.py  test_app.py  test_clients.py
third_pro/: app.py
third_pro/api/dependencies/: repositories.py
third_pro/api/routes/: clients.py  products.py
third_pro/configs/: connection.py  session.py
third_pro/db/: errors.py
third_pro/db/tables/: clients.py  products.py
third_pro/repository/: clients_repository.py  products_repository.py
third_pro/schemas/: clients_schemas.py  messages.py  products_schemas.py
